corrections on mobile code and topbar

--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@500;600;700&display=swap');
 
 body {
 	font-size: 22px;
@@ -45,6 +45,25 @@ h6 + p,
 	margin-bottom: var(--paragraph-space);
 }
 
+p.bold,
+span.bold,
+.body-1.bold,
+.body-2.bold,
+p .bold,
+span .bold,
+.body-1 .bold,
+.body-2 .bold,
+p strong,
+span strong,
+.body-1 strong,
+.body-2 strong,
+p b,
+span b,
+.body-1 b,
+.body-2 b {
+	font-weight: 700;
+}
+
 h1,
 .heading1,
 h2,
@@ -70,15 +89,15 @@ h1,
 .heading1 {
 	font-size: 58px;
 	line-height: 64px;
-	font-weight: 600;
-	letter-spacing: -0.002em;
+	font-weight: 500;
+	letter-spacing: -0.003em;
 }
 
 h2,
 .heading2 {
 	font-size: 50px;
 	line-height: 60px;
-	font-weight: 600;
+	font-weight: 500;
 	letter-spacing: -0.002em;
 }
 
@@ -94,24 +113,24 @@ h4,
 .heading4 {
 	font-size: 38px;
 	line-height: 56px;
-	font-weight: 500;
-	letter-spacing: -0.001em;
+	font-weight: 600;
+	letter-spacing: 0em;
 }
 
 h5,
 .heading5 {
 	font-size: 34px;
 	line-height: 56px;
-	font-weight: 500;
-	letter-spacing: 0em;
+	font-weight: 700;
+	letter-spacing: 0.001em;
 }
 
 h6,
 .heading6 {
 	font-size: 30px;
 	line-height: 52px;
-	font-weight: 500;
-	letter-spacing: 0em;
+	font-weight: 700;
+	letter-spacing: 0.001em;
 }
 
 p,
@@ -120,7 +139,7 @@ button,
 	font-size: 22px;
 	line-height: 32px;
 	font-weight: 400;
-	letter-spacing: 0em;
+	letter-spacing: 0.001em;
 }
 
 label,
@@ -130,41 +149,41 @@ input,
 	font-size: 20px;
 	line-height: 32px;
 	font-weight: 500;
-	letter-spacing: 0.029em;
+	letter-spacing: 0.043em;
 }
 
 .tooltip {
 	font-size: 16px;
 	line-height: 24px;
-	font-weight: 400;
-	letter-spacing: 0.054em;
+	font-weight: 600;
+	letter-spacing: 0.063em;
 }
 
 @media (min-width: 768px) {
 	h1,
 	.heading1 {
-		font-size: 88px;
-		line-height: 96px;
+		font-size: 78px;
+		line-height: 84px;
 	}
 	h2,
 	.heading2 {
-		font-size: 72px;
-		line-height: 88px;
+		font-size: 66px;
+		line-height: 80px;
 	}
 	h3,
 	.heading3 {
-		font-size: 60px;
-		line-height: 80px;
+		font-size: 54px;
+		line-height: 72px;
 	}
 	h4,
 	.heading4 {
-		font-size: 48px;
-		line-height: 72px;
+		font-size: 46px;
+		line-height: 68px;
 	}
 	h5,
 	.heading5 {
-		font-size: 40px;
-		line-height: 64px;
+		font-size: 38px;
+		line-height: 60px;
 	}
 	h6,
 	.heading6 {
@@ -185,7 +204,7 @@ input,
 		line-height: 28px;
 	}
 	.tooltip {
-		font-size: 14px;
-		line-height: 20px;
+		font-size: 16px;
+		line-height: 24px;
 	}
 }
